force-app/main/default/objects/Dealer_Payment__c/Dealer_Payment__c.object-meta.xml
<CustomObject>
    <description>Payments made by dealers to VoltCore for portal orders.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds>
<enableReports>true</enableReports><enableSearch>true</enableSearch>
<enableStreamingApi>true</enableStreamingApi>
    <label>Dealer Payment</label>
    <nameField><displayFormat>SF-DPAY-{000000}</displayFormat><label>Dealer Payment Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Dealer Payments</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
</CustomObject>