force-app/main/default/objects/Dealer_Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName><label>Amount</label><precision>12</precision><required>false</required><scale>2</scale><type>Currency</type>
</CustomField>