force-app/main/default/objects/Dealer_Payment__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName><label>Currency</label><length>3</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>