force-app/main/default/objects/Dealer_Payment__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Dealer</label>
    <referenceTo>Account</referenceTo><relationshipLabel>Dealer Payments</relationshipLabel>
    <relationshipName>Dealer_Payments</relationshipName><required>false</required><type>Lookup</type>
</CustomField>