force-app/main/default/objects/Dealer_Payment__c/fields/Dealer_Order__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Order__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Dealer Order</label>
    <referenceTo>Dealer_Order__c</referenceTo><relationshipLabel>Dealer Payments</relationshipLabel>
    <relationshipName>Dealer_Payments</relationshipName><required>false</required><type>Lookup</type>
</CustomField>