force-app/main/default/objects/Dealer_Payment__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName><label>Failure Reason</label><length>255</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>