force-app/main/default/objects/Dealer_Payment__c/fields/Paid_At__c.field-meta.xml
<CustomField>
    <fullName>Paid_At__c</fullName><label>Paid At</label><required>false</required><type>DateTime</type>
</CustomField>