force-app/main/default/objects/Dealer_Payment__c/fields/Portal_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Payment_Id__c</fullName><externalId>true</externalId><label>Portal Payment ID</label>
    <precision>18</precision><required>false</required><scale>0</scale><type>Number</type><unique>true</unique>
</CustomField>