force-app/main/default/objects/Dealer_Payment__c/fields/Portal_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Portal_Updated_At__c</fullName><label>Portal Updated At</label><required>false</required><type>DateTime</type>
</CustomField>