force-app/main/default/objects/Dealer_Payment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName><label>Payment Provider</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>RAZORPAY</fullName><default>true</default><label>Razorpay</label></value>
        <value><fullName>BANK_TRANSFER</fullName><default>false</default><label>Bank Transfer</label></value>
        <value><fullName>CREDIT</fullName><default>false</default><label>Credit</label></value>
    </valueSetDefinition></valueSet>
</CustomField>