force-app/main/default/objects/Dealer_Payment__c/fields/Razorpay_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Order_Id__c</fullName><externalId>true</externalId><label>Razorpay Order ID</label>
    <length>100</length><required>false</required><type>Text</type><unique>true</unique>
</CustomField>