force-app/main/default/objects/Dealer_Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Payment Status</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>CREATED</fullName><default>true</default><label>Created</label></value>
        <value><fullName>AUTHORIZED</fullName><default>false</default><label>Authorized</label></value>
        <value><fullName>CAPTURED</fullName><default>false</default><label>Captured</label></value>
        <value><fullName>FAILED</fullName><default>false</default><label>Failed</label></value>
        <value><fullName>REFUNDED</fullName><default>false</default><label>Refunded</label></value>
    </valueSetDefinition></valueSet>
</CustomField>